--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -26,3 +26,4 @@ $duration: 0.2s;
 $erie: 1015px;
 $ontario: 780px;
 $ladoga: 620px;
+$balkhash: 342px;
